# docs

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml
docs/: contato.md  index.md
docs/governanca/: governanca.md
docs/guia-desenvolvedores/: airflow-dbt-transformacao.md  dbt.md  manual-estilo.md  mapeamento-sankhya.md  metadados.md  pipelines-cloud.md  pipelines.md  visao-geral-infra.md
docs/static/css/: custom.css
docs/tutoriais/: como-configurar-conexao-powerbi-exact.md
